k8s/service-keycloak-ns.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-portal
  namespace: keycloak
  labels:
    app: access-portal
spec:
  selector:
    app: access-portal
  ports:
    - name: http
      port: 80
      targetPort: http
