k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: access-portal
  namespace: access-portal
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /signin
spec:
  rules:
    - host: portal.optlink.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: access-portal
                port:
                  name: http
